methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: type mismatch;
 found   : Unit
 required: Boolean
   recule(6)
         ^MethodsReturning:11: error: not found: value vuBiscuit
while (vuBiscuit==false){
       ^