methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var vuBiscuit=false
   for (i<-1 to 6){
     if (estSurBiscuit()==true){
       vuBiscuit=true
     }
     avance()
   }
   recule(6)
}

while (vuBiscuit==false){
  haveBaggle()
  droite()
  avance()
  gauche()
}
